--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://img.icons8.com/?size=100&id=16463&format=png&color=000000">
 </head>
 <body>
     <div class="game-container">
